--- a/howtomeoriginal.html
+++ b/howtomeoriginal.html
@@ -102,7 +102,13 @@
         transition: filter 5s ease-in-out;
         
       }
-
+    .video2{
+        width: 100%;
+        min-height: 50vh;
+        /* animation: blur 3s ease-in-out; */
+        transition: filter 5s ease-in-out;
+        
+      }
       .video:hover{
         /* filter: blur(0px); */
       }
@@ -160,8 +166,9 @@
     <!-- <div class="description">"How to Me Original"<br><br>Are our day to day lifes as unique as we think they are, or has everything we've ever done played out before?<br><br>student film, 2025</div> -->
  
     <div class="bigcenterimagecontainer">
-    <video src="HowtoMeOriginal.mov" type="video/mp4" id="videoPlayer" controls class="video" poster="poster-bieber-2.webp" playsinline webkit-playsinline></video>
-    </div>
+    <!-- <video src="HowtoMeOriginal.mov" type="video/mp4" id="videoPlayer" controls class="video" poster="poster-bieber-2.png" playsinline webkit-playsinline></video> -->
+    <iframe class="video2" src="https://www.youtube.com/embed/fJHUUbJQSYk?si=bRSxuXcYVKBknuA2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 
     <!-- <div class="text-wrapper">
     <div class="text-block"></div>
