--- a/projects.html
+++ b/projects.html
@@ -431,12 +431,12 @@
             <div class="itakelessspace2 white lightblue" data-target="cutout">Cut Outs</div>
             <div class="itakelessspace2 white lightblue" data-target="flagpoetry">Flag Type</div>
             <div class="itakelessspace2 white lightblue" data-target="titlegenerator">Title Generator</div>
-            <div class="itakelessspace2 white lightblue" data-target="blinds">40x1600</div>
+            <!-- <div class="itakelessspace2 white lightblue" data-target="blinds">40x1600</div> -->
             
         </div>
 
         <iframe id="onion" class="iframe hidden"  src="onion-creek.html" scrolling="yes"></iframe>
-        <iframe id="blinds" class="iframe hidden" src="through-the-blinds.html" scrolling="yes"></iframe>
+        <!-- <iframe id="blinds" class="iframe hidden" src="through-the-blinds.html" scrolling="yes"></iframe> -->
         <iframe id="orange" class="iframe hidden" src="orange-street.html" scrolling="yes"></iframe>
         <iframe id="poetry" class="iframe hidden" src="poetry-book.html" scrolling="yes"></iframe>
         <iframe id="hands" class="iframe hidden" src="hands.html" scrolling="yes"></iframe>
